--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>FITM MONITORING</title>
-    <link rel = "icon" href = "{% static "bootstrap-solid.svg" %}" type = "image/x-icon">
+    <!-- <link rel = "icon" href = "{% static "bootstrap-solid.svg" %}" type = "image/x-icon"> -->
+    <link rel = "icon" href =  
+"https://media.geeksforgeeks.org/wp-content/cdn-uploads/gfg_200X200.png" 
+        type = "image/x-icon"> 
     <link href=" {% static "styles.css" %} " rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
