--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,8 @@
     <title>FITM MONITORING</title>
     <link rel = "icon" href = "{% static "bootstrap-solid.svg" %}" type = "image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href=" {% static "styles.css" %} " rel="stylesheet" />
+    #<link href=" {% static "styles.css" %} " rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="{% static "styles.css" %}">
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
 </head>
