--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src=" {% static "scripts.js" %} "></script>
+    <script src=" {% static 'scripts.js' %} "></script>
 </body>
 </html>
