--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}"> 
+    <link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}"> 
 </head>
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
