--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">FITM MONITORING NETWORK</h3></div>
                                 <div class="card-body">
-                                    <form>
+                                    <form method="POST" action="/index/">
                                         <div class="form-group">
                                             <label class="small mb-1" for="inputEmailAddress">Username</label>
                                             <input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Enter your username" />
@@ -38,7 +38,7 @@
                                         </div>
                                         <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <a class="small" href="password.html">Forgot Password?</a>
-                                            <a class="btn btn-primary" href="/home">Login</a>
+                                            <button class="btn btn-primary" >Login</button>
                                         </div>
                                     </form>
                                 </div>
