--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                                     <form method="POST" action="/index/">
                                         <div class="form-group">
                                             <label class="small mb-1" for="inputEmailAddress">Username</label>
-                                            <input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Enter your username" />
+                                            <input class="form-control py-4" id="inputEmailAddress" type="text" placeholder="Enter your username" />
                                         </div>
                                         <div class="form-group">
                                             <label class="small mb-1" for="inputPassword">Password</label>
