--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">FITM MONITORING NETWORK</h3></div>
                                 <div class="card-body">
-                                    <form method="POST" action="/index/">
+                                    <form method="POST" action="/home/">
                                         <div class="form-group">
                                             <label class="small mb-1" for="inputEmailAddress">Username</label>
                                             <input class="form-control py-4" id="inputEmailAddress" type="text" placeholder="Enter your username" />
