--- a/templates/index.html
+++ b/templates/index.html
@@ -25,11 +25,11 @@
                                   <form method="GET" action="/login">
                                         <div class="form-group">
                                             <label class="small mb-1" for="inputEmailAddress">Username</label>
-                                            <input class="form-control py-4" id="inputEmailAddress" type="text" placeholder="Enter your username" />
+                                            <input class="form-control py-4" name="username" id="inputEmailAddress" type="text" placeholder="Enter your username" />
                                         </div>
                                         <div class="form-group">
                                             <label class="small mb-1" for="inputPassword">Password</label>
-                                            <input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" />
+                                            <input class="form-control py-4" name="password" id="inputPassword" type="password" placeholder="Enter password" />
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox">
