--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">FITM MONITORING NETWORK</h3></div>
                                 <div class="card-body">
                                   <!--FORM-->  
-                                  <form method="GET" action="/login">
+                                  <form method="POST" action="/login">
                                         <div class="form-group">
                                             <label class="small mb-1" for="inputEmailAddress">Username</label>
                                             <input class="form-control py-4" name="username" id="inputEmailAddress" type="text" placeholder="Enter your username" />
