--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
                                 <div class="card-body">
                                   <!--FORM-->  
                                   <form method="POST" action="/login">
+                                        {% csrf_token %}
                                         <div class="form-group">
                                             <label class="small mb-1" for="inputEmailAddress">Username</label>
                                             <input class="form-control py-4" name="username" id="inputEmailAddress" type="text" placeholder="Enter your username" />
