--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
     <title>FITM MONITORING</title>
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}"> 
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css"> 
     <base href="/">
 </head>
 <body class="sb-nav-fixed">
