--- a/templates/home.html
+++ b/templates/home.html
@@ -72,6 +72,7 @@
                 <i class="fas fa-table mr-1"></i>
                 DataTable Example
             </div>
+            <!-- Table -->
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -80,9 +81,6 @@
                                 <th>Name</th>
                                 <th>Status</th>
                                 <th>Uptime</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
                             </tr>
                         </thead>
                         <tfoot>
@@ -90,9 +88,7 @@
                                 <th>Name</th>
                                 <th>Position</th>
                                 <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
+                               
                             </tr>
                         </tfoot>
                         <tbody>
@@ -101,15 +97,14 @@
                                 <td>Host</td>
                                 <td>Junior Technical Author</td>
                                 <td>San Francisco</td>
-                                <td>66</td>
-                                <td>2009/01/12</td>
-                                <td>$86,000</td>
+                               
                             </tr>
                             
                         </tbody>
                     </table>
                 </div>
             </div>
+            <!--End Table-->
         </div>
     </div>
 </main>
