--- a/templates/home.html
+++ b/templates/home.html
@@ -94,7 +94,7 @@
                             </tr>
                         </tfoot>
                         <tbody>
-                            {% for qry in data %} 
+                            {% for qry in hostname %} 
                             <tr>
                                 <td>{{ qry.hostname }}</td>
                                 <td>{{ qry.description }}</td>
