--- a/templates/report.html
+++ b/templates/report.html
@@ -1,6 +1,13 @@
 {% extends "main.html" %}
 {% block content %}
 
-
+{% for qry in hostname %} 
+     <tr>
+         <td>{{ qry.hostname }}</td>
+         <td>{{ qry.description }}</td>
+         <td>{{ qry.uptime }}</td>
+                               
+    </tr>
+{% endfor %}
 
 {% endblock %}
