--- a/templates/report.html
+++ b/templates/report.html
@@ -3,6 +3,7 @@
 
 {% for qry in hostname %} 
      <tr>
+         <td>sgg</td>
          <td>{{ qry.hostname }}</td>
          <td>{{ qry.description }}</td>
          <td>{{ qry.uptime }}</td>
