--- a/templates/home.html
+++ b/templates/home.html
@@ -98,7 +98,7 @@
                             <tr>
                                 <td>{{ qry.hostname }}</td>
                                 <td>{{ qry.description }}</td>
-                                <td>{{ qry.uptime }}</td>
+                                <td>{{ hostname }}</td>
                                
                             </tr>
                              {% endfor %}
