--- a/templates/home.html
+++ b/templates/home.html
@@ -89,7 +89,7 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Status</th>
-                                <th>Uptime</th>
+                                <th>{{ hostname }}</th>
                                
                             </tr>
                         </tfoot>
