--- a/templates/home.html
+++ b/templates/home.html
@@ -81,7 +81,7 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Status</th>
-                                <th>{{username}}</th>
+                                <th>{{hostname}}</th>
                             </tr>
                            
                         </thead>
