--- a/templates/home.html
+++ b/templates/home.html
@@ -95,14 +95,14 @@
                             </tr>
                         </tfoot>
                         <tbody>
-                            {% for qry in hostname %} 
+                            <!-- {% for qry in hostname %} 
                             <tr>
                                 <td>{{ qry.hostname }}</td>
                                 <td>{{ qry.description }}</td>
                                 <td>{{ hostname }}</td>
                                
                             </tr>
-                             {% endfor %}
+                             {% endfor %} -->
                             
                         </tbody>
                     </table>
