--- a/templates/home.html
+++ b/templates/home.html
@@ -82,7 +82,7 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Status</th>
-                                <th>{{hostname}}</th>
+                                <th>{{data}}</th>
                             </tr>
                            
                         </thead>
