--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,4 @@
 {% extends "main.html" %}
-
 {% block content %}
 <main>
     <div class="container-fluid">
@@ -82,7 +81,7 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Status</th>
-                                <th>{{data}}</th>
+                                <th>{{data1}}</th>
                             </tr>
                            
                         </thead>
@@ -95,14 +94,14 @@
                             </tr>
                         </tfoot>
                         <tbody>
-                            <!-- {% for qry in hostname %} 
+                            {% for qry in hostname %} 
                             <tr>
                                 <td>{{ qry.hostname }}</td>
                                 <td>{{ qry.description }}</td>
                                 <td>{{ hostname }}</td>
                                
                             </tr>
-                             {% endfor %} -->
+                             {% endfor %}
                             
                         </tbody>
                     </table>
