--- a/templates/home.html
+++ b/templates/home.html
@@ -81,7 +81,7 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Status</th>
-                                <th>{{data1}}</th>
+                                <th>{{hostname}}</th>
                             </tr>
                            
                         </thead>
@@ -94,14 +94,14 @@
                             </tr>
                         </tfoot>
                         <tbody>
-                            {% for qry in hostname %} 
+                            <!-- {% for qry in hostname %} 
                             <tr>
                                 <td>{{ qry.hostname }}</td>
                                 <td>{{ qry.description }}</td>
                                 <td>{{ hostname }}</td>
                                
                             </tr>
-                             {% endfor %}
+                             {% endfor %} -->
                             
                         </tbody>
                     </table>
