--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <main>
     <div class="container-fluid">
-        <h1 class="mt-4">Dashboard</h1>
+        <h1 class="mt-4">{{hostname}}</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item active">Dashboard</li>
         </ol>
